--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   </head>
   <body>
     <app-root></app-root>
-  <script type="text/javascript" src="/memoramaruntime.js"></script><script type="text/javascript" src="/memoramapolyfills.js"></script><script type="text/javascript" src="/memoramastyles.js"></script><script type="text/javascript" src="/memoramavendor.js"></script><script type="text/javascript" src="/memoramamain.js"></script></body>
+  <script type="text/javascript" src="/memorama/runtime.js"></script><script type="text/javascript" src="/memorama/polyfills.js"></script><script type="text/javascript" src="/memorama/styles.js"></script><script type="text/javascript" src="/memorama/vendor.js"></script><script type="text/javascript" src="/memorama/main.js"></script></body>
 </html>
